fix(common): Add gap to message participant flex container

--- a/common/common.scss
+++ b/common/common.scss
@@ -117,6 +117,7 @@
 .message-topic-card__participant {
   display: inline-flex;
   align-items: center;
+  gap: 0.5em;
   font-size: var(--font-down-1);
 
   .avatar {
@@ -125,13 +126,8 @@
     margin-right: 4px;
 
     &:last-of-type {
-      margin-right: 0.5em;
+      margin-right: 0;
     }
-  }
-
-  a[data-user-card]::after {
-    content: attr(data-user-card);
-    color: var(--primary-high);
   }
 }
 
